# SCARA-Kinematics

./: CMakeLists.txt  LICENSE  README.md
include/: Scara.h
src/: Scara.cpp  ah3_demo.cpp
